--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,11 @@ description: 'A Flutter widget that scrolls text infinitely. Provides many
   customizations including custom scroll directions, durations, curves as well
   as pauses after every round.'
 version: 2.2.4
-repository: https://github.com/MarcelGarus/marquee
+repository: https://github.com/andfaraway/marquee_plus
 
 environment:
   flutter: '>=3.0.0'
-  sdk: '>=2.17.0'
+  sdk: '>=2.17.0<4.0.0'
 
 dependencies:
   fading_edge_scrollview: ^4.1.1
